--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "format": "prettier --check --ignore-path .gitignore",
-    "format:fix": "prettier --wire --ignore-path .gitignore"
+    "build": "vite build"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
@@ -15,5 +13,8 @@
     "prettier": "^3.0.3",
     "tailwindcss": "^3.3.3",
     "vite": "^4.0.0"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.2"
   }
 }
