--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vite": "^4.0.0"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.4.2"
+    "@fortawesome/fontawesome-free": "^6.4.2",
+    "tailwind-scrollbar": "^3.0.5"
   }
 }
