--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "chart.js": "^4.4.0",
     "tailwind-scrollbar": "^3.0.5"
   }
 }
